Bug 496215 - SFTP Import "new" button is not visible unless hovered over

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme_common.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme_common.css
@@ -668,6 +668,14 @@ a.breadcrumb.currentLocation {
  	border-color: transparent;
 }
 
+.dialogContent .dropdownTrigger:not(.dropdownDefaultButton) {
+	border: 1px solid #00AED1 !important;
+}
+
+.dialogContent .dropdownTrigger:not(.dropdownDefaultButton):not(:hover) {
+	color: #00AED1 !important;
+}
+
 .dropdownTrigger a {
 	text-decoration: none;
 }
